--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://db9a2304-96f5-4dbb-9143-3d79fb8891b4.preview.emergentagent.com
 WDS_SOCKET_PORT=443
