--- a/.gitignore
+++ b/.gitignore
@@ -557,3 +557,5 @@ node_modules/@next/swc-linux-arm64-musl/next-swc.linux-arm64-musl.node
 # Environment files
 *.env
 *.env.*
+node_modules/@next/swc-linux-x64-musl/next-swc.linux-x64-musl.node
+node_modules/@next/swc-linux-x64-gnu/next-swc.linux-x64-gnu.node
