--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.19",
         "globals": "^16.2.0",
+        "playwright": "^1.57.0",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "wait-on": "^8.0.4"
